--- a/.github/workflows/Recovery-Builder-PBRP.yml
+++ b/.github/workflows/Recovery-Builder-PBRP.yml
@@ -71,8 +71,8 @@ jobs:
     - name: Check Out
       uses: actions/checkout@v2.5.0
 
-    - name: Cleanup
-      uses: rokibhasansagar/slimhub_actions@main
+   # - name: Cleanup
+   #   uses: rokibhasansagar/slimhub_actions@main
       
     - name: Set Swap Space
       uses: pierotofy/set-swap-space@master
